Minor fixes for dark mode

--- a/src/css/common.scss
+++ b/src/css/common.scss
@@ -40,7 +40,7 @@ html {
     background: #dee1ea;
 
     @include DarkThemeOverride {
-        background: #5c606c;
+        background: $darkModeGameBackground;
     }
 }
 
