--- a/src/css/main.scss
+++ b/src/css/main.scss
@@ -112,6 +112,6 @@ body.modalDialogActive,
 body.externalAdOpen,
 body.ingameDialogOpen {
     > *:not(.ingameDialog):not(.modalDialogParent):not(.loadingDialog):not(.gameLoadingOverlay):not(#ingame_HUD_ModalDialogs):not(.noBlur) {
-        filter: blur(5px) !important;
+        // filter: blur(5px) !important;
     }
 }
